--- a/CalculatorPro/HisAndMemDis.xaml
+++ b/CalculatorPro/HisAndMemDis.xaml
@@ -5,39 +5,39 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CalculatorPro"
              mc:Ignorable="d" 
-             Height="460" MinWidth="240" MaxWidth="330" Background="#e6e6e6">
-    <Grid Name="HisAndMemGrid">
+             Height="460" MinWidth="240" MaxWidth="330" Background="#bfe6e6e6" >
+    <Grid Name="HisAndMemGrid" Background="#bfe6e6e6">
         <Grid.RowDefinitions>
             <RowDefinition Height="49"/>
             <RowDefinition Height="419*"/>
             <RowDefinition Height="40.75"/>
         </Grid.RowDefinitions>
-        <DockPanel Grid.Row="0" LastChildFill="False">
-            <Grid DockPanel.Dock="Left" Margin="10,10,10,5.8">
-                <Button  Style="{StaticResource btnHisExtra}"  Click="BtnHisRec_Click" Name="btnHisExtra">历史记录</Button>
+        <DockPanel Grid.Row="0" LastChildFill="False" Background="#bfe6e6e6">
+            <Grid DockPanel.Dock="Left" Margin="10,10,10,5.8" Background="#bfe6e6e6">
+                <Button  Style="{StaticResource btnHisExtra}"  Click="BtnHisRec_Click" Name="btnHisExtra" Background="#bfe6e6e6">历史记录</Button>
                 <Image Source="Resources\Img\His.png" Width="60" Margin="5,28,2.8,0" Name="ImgHis" Visibility="Visible"></Image>
             </Grid>
-            <Grid DockPanel.Dock="Left"  Margin="20,10,10,5.8">
-                <Button  Style="{StaticResource btnMemExtra}" Width="34" Click="BtnMemRec_Click" Name="btnMemExtra">内存</Button>
+            <Grid DockPanel.Dock="Left"  Margin="20,10,10,5.8" Background="#bfe6e6e6">
+                <Button  Style="{StaticResource btnMemExtra}" Width="34" Click="BtnMemRec_Click" Name="btnMemExtra" Background="#bfe6e6e6">内存</Button>
                 <Image Source="Resources\Img\Mem.png"  Width="30" Margin="2,13,2,-13" Visibility="Hidden" Name="ImgMem"/>
             </Grid>
         </DockPanel>
-        <Grid  Grid.Row="1" Name="lstHis" Visibility="Visible">
-            <Label FontSize="15" FontWeight="Black" FontFamily="微软雅黑" Name="lblHis" >尚无历史记录</Label>
+        <Grid  Grid.Row="1" Name="lstHis" Visibility="Visible" Background="#bfe6e6e6">
+            <Label FontSize="15" FontWeight="Black" FontFamily="微软雅黑" Name="lblHis" Background="#bfe6e6e6">尚无历史记录</Label>
         <Border >
-                <ListBox ItemContainerStyle="{StaticResource HistoryListItemStyle}" Name="lstBoxHis" Background="#e6e6e6" Margin="0,26,0,0"  ItemsSource="{Binding History}">
+                <ListBox ItemContainerStyle="{StaticResource HistoryListItemStyle}" Name="lstBoxHis" Background="#bfe6e6e6" Margin="0,26,0,0"  ItemsSource="{Binding History}">
             </ListBox>
         </Border>
         </Grid>
-        <Grid Grid.Row="1" Name="lstMem" Visibility="Collapsed" >
-            <Label FontSize="15" FontWeight="Black" FontFamily="微软雅黑" Name="lblMem">内存中没有内容</Label>
+        <Grid Grid.Row="1" Name="lstMem" Visibility="Collapsed" Background="#bfe6e6e6">
+            <Label FontSize="15" FontWeight="Black" FontFamily="微软雅黑" Name="lblMem" Background="#bfe6e6e6">内存中没有内容</Label>
             <Border>
-                <ListBox ItemContainerStyle="{StaticResource MemoryListItemStyle}" Background="#e6e6e6"   Name="lstBoxMem" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ItemsSource="{Binding Memory}" Margin="0,26,0,0"  >
+                <ListBox ItemContainerStyle="{StaticResource MemoryListItemStyle}" Background="#bfe6e6e6"   Name="lstBoxMem" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ItemsSource="{Binding Memory}" Margin="0,26,0,0"  >
                 </ListBox>
             </Border>
         </Grid>
-        <DockPanel Grid.Row="2">
-            <Button  DockPanel.Dock="Left" Width="40.75" Height="40.75" HorizontalAlignment="Right" Background="#e6e6e6" BorderThickness="0" Name="btnDel" Visibility="Hidden">
+        <DockPanel Grid.Row="2" Background="#bfe6e6e6">
+            <Button  DockPanel.Dock="Left" Width="40.75" Height="40.75" HorizontalAlignment="Right" Background="#bfe6e6e6" BorderThickness="0" Name="btnDel" Visibility="Hidden">
                 <Image Source="Resources\Img\delete.png"></Image>
             </Button>
         </DockPanel>
