--- a/CalculatorPro/Resources/Style/StyleDictionary.xaml
+++ b/CalculatorPro/Resources/Style/StyleDictionary.xaml
@@ -1,10 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:CalculatorPro.Resources.Style">
+                    xmlns:local="clr-namespace:CalculatorPro.Resources.Style"
+                    xmlns:demo="clr-namespace:CalculatorPro"
+                    >
 
     <!-- 最小最大化按钮样式 -->
     <Style x:Key="btnMinAndMax" TargetType="Button">
-        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Setter Property="Background" Value="#bfe6e6e6"></Setter>
         <Setter Property="BorderThickness" Value="0"></Setter>
         <Setter Property="FontWeight" Value="ExtraLight"></Setter>
         <Setter Property="Width" Value="46.455"></Setter>
@@ -16,6 +18,7 @@
                 <ControlTemplate TargetType="Button">
                     <Grid Background="{TemplateBinding Background}">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                       
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -31,7 +34,7 @@
     </Style>
     <!-- 关闭按钮样式-->
     <Style x:Key="btnClose" TargetType="Button">
-        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Setter Property="Background" Value="#bfe6e6e6"></Setter>
         <Setter Property="BorderThickness" Value="0"></Setter>
         <Setter Property="FontWeight" Value="ExtraLight"></Setter>
         <Setter Property="Width" Value="46.455"></Setter>
@@ -60,7 +63,7 @@
     <Style x:Key="btnMem" TargetType="Button">
         <Setter Property="BorderThickness" Value="0"></Setter>
         <Setter Property="FontWeight" Value="Black"></Setter>
-        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Setter Property="Background" Value="#bfe6e6e6"></Setter>
         <Setter Property="FontSize" Value="12"></Setter>
         <Setter Property="FontFamily" Value="Yu Gothic UI Semibold"></Setter>
         <Setter Property="Template">
@@ -68,6 +71,11 @@
                 <ControlTemplate TargetType="Button">
                     <Grid Background="{TemplateBinding Background}">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Border BorderThickness="1">
+                            <Border.BorderBrush>
+                                <demo:RevealBorderBrush />
+                            </Border.BorderBrush>
+                        </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -95,6 +103,11 @@
                 <ControlTemplate TargetType="Button">
                     <Grid Background="{TemplateBinding Background}">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Border BorderThickness="1">
+                            <Border.BorderBrush>
+                                <demo:RevealBorderBrush />
+                            </Border.BorderBrush>
+                        </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -121,6 +134,11 @@
                 <ControlTemplate TargetType="Button">
                     <Grid Background="{TemplateBinding Background}">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Border BorderThickness="1">
+                            <Border.BorderBrush>
+                                <demo:RevealBorderBrush />
+                            </Border.BorderBrush>
+                        </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -147,6 +165,11 @@
                 <ControlTemplate TargetType="Button">
                     <Grid Background="{TemplateBinding Background}">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Border BorderThickness="1">
+                            <Border.BorderBrush>
+                                <demo:RevealBorderBrush />
+                            </Border.BorderBrush>
+                        </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -165,7 +188,7 @@
         <Setter Property="Width" Value="40.75"></Setter>
         <Setter Property="Height" Value="40.75"></Setter>
         <Setter Property="BorderThickness" Value="0"></Setter>
-        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Setter Property="Background" Value="#bfe6e6e6"></Setter>
         <Setter Property="FontSize" Value="21"></Setter>
         <Setter Property="FontWeight" Value="Light"></Setter>
         <Setter Property="FontFamily" Value="新宋体"></Setter>
@@ -191,7 +214,7 @@
         <Setter Property="Width" Value="40.75"></Setter>
         <Setter Property="Height" Value="40.75"></Setter>
         <Setter Property="BorderThickness" Value="0"></Setter>
-        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Setter Property="Background" Value="#bfe6e6e6"></Setter>
         <Setter Property="FontSize" Value="21"></Setter>
         <Setter Property="FontWeight" Value="Light"></Setter>
         <Setter Property="FontFamily" Value="新宋体"></Setter>
@@ -221,7 +244,7 @@
 
     <!--文本框样式-->
     <Style x:Key="txtBigBox" TargetType="TextBox">
-        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Setter Property="Background" Value="#bfe6e6e6"></Setter>
         <Setter Property="BorderThickness" Value="0"></Setter>
         <Setter Property="IsReadOnly" Value="True"></Setter>
         <Setter Property="TextAlignment" Value="Right"></Setter>
@@ -231,7 +254,7 @@
     </Style>
 
     <Style x:Key="txtSmallBox" TargetType="TextBox">
-        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Setter Property="Background" Value="#bfe6e6e6"></Setter>
         <Setter Property="BorderThickness" Value="0"></Setter>
         <Setter Property="IsReadOnly" Value="True"></Setter>
         <Setter Property="TextAlignment" Value="Right"></Setter>
@@ -245,18 +268,18 @@
         <Setter Property="FontFamily" Value="微软雅黑"></Setter>
         <Setter Property="FontWeight" Value="Black"></Setter>
         <Setter Property="Height" Value="32.6"></Setter>
-        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Setter Property="Background" Value="#bfe6e6e6"></Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border BorderBrush="#e6e6e6" BorderThickness="0,0,0,3.5" Name="Border">
+                    <Border BorderBrush="#bfe6e6e6" BorderThickness="0,0,0,3.5" Name="Border">
                         <Grid Background="{TemplateBinding Background}">
                             <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#e6e6e6"></Setter>
+                            <Setter Property="Background" Value="#bfe6e6e6"></Setter>
                             <Setter Property="Opacity" Value="0.8"></Setter>
                         </Trigger>
 
@@ -270,7 +293,7 @@
         <Setter Property="FontFamily" Value="微软雅黑"></Setter>
         <Setter Property="FontWeight" Value="Black"></Setter>
         <Setter Property="Height" Value="32.6"></Setter>
-        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Setter Property="Background" Value="#bfe6e6e6"></Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
@@ -281,7 +304,7 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#e6e6e6"></Setter>
+                            <Setter Property="Background" Value="#bfe6e6e6"></Setter>
                             <Setter Property="Opacity" Value="0.8"></Setter>
                         </Trigger>
                     </ControlTemplate.Triggers>
@@ -291,12 +314,12 @@
     </Style>
     <!--历史内存界面listboxItme样式-->
     <Style x:Key="lstItem" TargetType="ListBoxItem">
-        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Setter Property="Background" Value="#bfe6e6e6"></Setter>
         <Setter Property="Height" Value="69.275"></Setter>
         <Setter Property="FontSize" Value="20"></Setter>
     </Style>
     <Style x:Key="lstItemHisDefault" TargetType="ListBoxItem">
-        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Setter Property="Background" Value="#bfe6e6e6"></Setter>
         <Setter Property="Height" Value="69.275"></Setter>
         <Setter Property="FontSize" Value="15"></Setter>
         <Setter Property="FontFamily" Value="微软雅黑"></Setter>
@@ -309,7 +332,7 @@
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#e6e6e6"></Setter>
+                            <Setter Property="Background" Value="#bfe6e6e6"></Setter>
                             <Setter Property="BorderThickness" Value="0"></Setter>
                             <Setter Property="IsEnabled" Value="False"></Setter>
                         </Trigger>
@@ -319,7 +342,7 @@
         </Setter>
     </Style>
     <Style x:Key="lstItemMemDefault" TargetType="ListBoxItem">
-        <Setter Property="Background" Value="#e6e6e6"></Setter>
+        <Setter Property="Background" Value="#bfe6e6e6"></Setter>
         <Setter Property="Height" Value="69.275"></Setter>
         <Setter Property="FontSize" Value="15"></Setter>
         <Setter Property="FontFamily" Value="微软雅黑"></Setter>
@@ -332,7 +355,7 @@
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#e6e6e6"></Setter>
+                            <Setter Property="Background" Value="#bfe6e6e6"></Setter>
                             <Setter Property="BorderThickness" Value="0"></Setter>
                             <Setter Property="IsEnabled" Value="False"></Setter>
                         </Trigger>
